# VP_LabRab3

./: CMakeLists.txt  main.cpp
Book/: Book.cpp  Book.h
Card/: Card.cpp  Card.h
ItemMenu/: ItemMenu.cpp  ItemMenu.h
Menu/: Menu.cpp  Menu.h
Reader/: Reader.cpp  Reader.h
Storage/: Storage.cpp  Storage.h
User/: User.cpp  User.h
Worker/: Worker.cpp  Worker.h
